kubernetes/telegraf/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  namespace: telegraf
spec:
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
        - name: telegraf
          image: docker.io/skaterdurf/telegraf:1.0.0
          resources:
            limits:
              memory: 2048Mi
              cpu: 2000m
            requests:
              memory: 512Mi
              cpu: 250m
          ports:
            - containerPort: 8092
              protocol: UDP
            - containerPort: 6514 #Syslog
              protocol: TCP
            - containerPort: 8094
              protocol: TCP
            - containerPort: 8125
            - containerPort: 161
              protocol: UDP
            - containerPort: 161
              protocol: TCP
            - containerPort: 162
              protocol: UDP
            - containerPort: 162
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/telegraf/telegraf.conf
              name: telegraf-config
              subPath: telegraf.conf
              readOnly: true
            - mountPath: /etc/telegraf/telegraf.d/routersnp.conf
              name: routersnmp-config
              subPath: routersnmp.conf
      volumes:
        - name: telegraf-config
          configMap:
            name: telegraf-config
        - name: routersnmp-config
          configMap:
            name: routersnmp-config-cm
